--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                 <div class="col">
                     <h4>Pranav Shikarpur</h4>
                     <img height="200px" class="rounded-circle mt-2" src="img/team/pranav.jpg" alt="Pranav Shikarpur">
+                    <p class="lead text-center text-uppercase mt-2">Co-founder</p>
                     <ul class="list-inline social-buttons mt-3">
                         <li class="list-inline-item">
                             <a href="mailto:pranav@gowww.org.in" target="_blank">
@@ -109,6 +110,25 @@
                 <div class="d-sm-none"><hr></div>
                 <div class="col my-3 my-sm-0">
                     <h4>Mohammed Suhail CS</h4>
+                    <img height="200px" class="rounded-circle mt-2" src="img/team/placeholder.jpg" alt="Mohammed Suhail CS">
+                    <p class="lead text-center text-uppercase mt-2">Co-founder</p>
+                    <ul class="list-inline social-buttons mt-3">
+                        <li class="list-inline-item">
+                            <a href="mailto:s@gowww.org.in" target="_blank">
+                                <i class="fa fa-envelope"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.instagram.com/itsmesuhailcs/" target="_blank">
+                                <i class="fa fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://in.linkedin.com/in/iamsuhailcs" target="_blank">
+                                <i class="fa fa-linkedin"></i>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
