Fixed mobile compatibility issue

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </ul>
                 </div>
                 <div class="vl d-none d-sm-block"></div>
-                <div class="d-sm-none"><hr></div>
+                <div class="d-sm-none col-sm mt-3"><hr></div>
                 <div class="col my-3 my-sm-0">
                     <h4>Mohammed Suhail CS</h4>
                     <img height="200px" class="rounded-circle mt-2" src="img/team/placeholder.jpg" alt="Mohammed Suhail CS">
