--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="img/logo.jpeg">
     <link rel="shortcut icon" href="img/logo.jpeg">
 
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
+    <script src="js/typed.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
@@ -22,7 +22,7 @@
 <body class="bg-info">
 
 
-<div class="col-sm-12 col-lg-12 mx-auto mt-5">
+<div class="col-sm-12 col-lg-12 mx-auto mt-4">
 <div class="jumbotron">
     <div class="container">
     <section>
@@ -35,7 +35,7 @@
         <div class="col">
             <div class="mt-3 text-center">
                 <div id="typed-strings">
-                    <p>Are you a Early Stage or Amateur Developer?</p>
+                    <p>Are you a Early Stage or Amateur Web Developer?</p>
                     <p>Are you searching for an opportunity to display your web development skills to the world?</p>
                 </div>
             </div>
@@ -65,11 +65,17 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row mt-5">
             <div class="col text-center">
-                <a href="#team"><i class="material-icons">
-                    arrow_downward
-                </i></a>
+                <ul class="list-inline social-buttons mt-3">
+                    <li class="list-inline-item">
+                        <a href="#team">
+                            <i class="material-icons">
+                                arrow_downward
+                            </i>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -133,6 +139,9 @@
             </div>
         </div>
     </section>
+        <hr>
+    <p class="text-center lead">&copy; GoWWW 2018</p>
+        <p class="text-center lead"><a href="mailto:meetings@gowww.org.in">Email Us!</a></p>
 </div>
 </div>
 </div>
@@ -142,6 +151,7 @@
         stringsElement: '#typed-strings',
         loop: true,
         typeSpeed: 50,
+        backDelay: 1500,
         backSpeed: 20,
         showCursor: true,
         cursorChar: '|',
