Added CC to email links

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </section>
         <hr>
     <p class="text-center lead">&copy; GoWWW 2018</p>
-        <p class="text-center lead"><a href="mailto:meetings@gowww.org.in">Email Us!</a></p>
+        <p class="text-center lead"><a href="mailto:meetings@gowww.org.in?cc=pranav@gowww.org.in, s@gowww.org.in" target="_blank">Email Us!</a></p>
 </div>
 </div>
 </div>
