Changed bg color

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="js/scroll.js"></script>
 </head>
-<body class="bg-info">
+<body class="bg-primary">
 
 
 <div class="col-sm-12 col-lg-12 mx-auto mt-4">
