Added register section

--- a/index.html
+++ b/index.html
@@ -137,8 +137,28 @@
                     </ul>
                 </div>
             </div>
+            <div class="row mt-5">
+                <div class="col text-center">
+                    <ul class="list-inline social-buttons mt-3">
+                        <li class="list-inline-item">
+                            <a href="#register">
+                                <i class="material-icons">
+                                    arrow_downward
+                                </i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
+        <hr>
+      <section id="register">
+          <div class="mx-auto mt-5">
+              <h1 class="display-4 text-center">Interested?</h1>
+              <p class="text-center"><a class="btn btn-outline-success btn-lg" href="https://thesuhailcompany.typeform.com/to/JbWM5J" target="_blank">Register Now!</a></p>
+          </div>
+      </section>
         <hr>
     <p class="text-center lead">&copy; GoWWW 2018</p>
         <p class="text-center lead"><a href="mailto:meetings@gowww.org.in?cc=pranav@gowww.org.in, s@gowww.org.in" target="_blank">Email Us!</a></p>
