Made the Let's Get Started button larger

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <hr>
     <div class="row mb-5">
         <div class="mx-auto">
-            <h1 class="display-4 text-center">If you just said yes to these questions, then <br><a href="#about" class="btn btn-outline-primary" title="Get Started">Get Started</a></h1>
+            <h1 class="display-4 text-center">If you just said yes to these questions, then <br><a href="#about" class="btn btn-outline-primary btn-lg" title="Get Started">Let's Get Started</a></h1>
         </div>
     </div>
     </section>
