Configured the meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="GoWWW is a Non Profit Initiative that connects early stage and amateur web developers with Non Profit Organizations, where you can contribute as a developer, receive Mentoring, and a lot of perks.">
+    <meta name="author" content="Pranav Shikarpur, Mohammed Suhail CS">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -47,7 +49,7 @@
     <hr>
     <div class="row mb-5">
         <div class="mx-auto">
-            <h1 class="display-4 text-center">If you just said yes to these questions, then <br><a href="#about" class="btn btn-outline-primary btn-lg" title="Get Started">Let's Get Started</a></h1>
+            <h1 class="display-4 text-center">If you just said yes to these questions, then <br><a href="#about" class="btn btn-outline-primary btn-lg" title="Let's Get Started">Let's Get Started</a></h1>
         </div>
     </div>
     </section>
