--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="col">
             <div class="mt-3 text-center">
                 <div id="typed-strings">
-                    <p>Are you a Early Stage or Amateur Web Developer?</p>
+                    <p>Are you an Early Stage or Amateur Web Developer?</p>
                     <p>Are you searching for an opportunity to display your web development skills to the world?</p>
                 </div>
             </div>
