--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="GoWWW is a Non Profit Initiative that connects early stage and amateur web developers with Non Profit Organizations, where you can contribute as a developer, receive Mentoring, and a lot of perks.">
+    <meta name="description" content="A Non Profit Initiative to Foster a Symbiotic Relation between Web Developers and Organizations">
     <meta name="author" content="Pranav Shikarpur, Mohammed Suhail CS">
 
     <!-- Bootstrap CSS -->
@@ -32,8 +32,10 @@
         <div class="col">
             <div class="text-center">
                 <img src="img/logo.jpeg" alt="GoWWW" id="logo" style="height: 250px;">
+                <div class="col-lg-8 mx-auto"><p class="lead mt-2">A Non Profit Initiative to Foster a Symbiotic Relation between Web Developers and Organizations</p></div>
             </div>
         </div>
+        <div class="d-sm-none col-sm mt-3"><hr></div>
         <div class="col">
             <div class="mt-3 text-center">
                 <div id="typed-strings">
