--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <div class="col-lg-8 mx-auto"><p class="lead mt-2">A Nonprofit Initiative to Foster a Symbiotic Relationship with Developers and Organizations</p></div>
             </div>
         </div>
+        <div class="vl d-none d-sm-block"></div>
         <div class="d-sm-none col-sm mt-3"><hr></div>
         <div class="col">
             <div class="mt-3 text-center">
