Added suhail's image and changed logo

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title>GoWWW</title>
-    <link rel="icon" href="img/logo.jpeg">
-    <link rel="shortcut icon" href="img/logo.jpeg">
+    <link rel="icon" href="img/logo.png">
+    <link rel="shortcut icon" href="img/logo.png">
 
     <script src="js/typed.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -31,7 +31,7 @@
     <div class="row mb-5">
         <div class="col">
             <div class="text-center">
-                <img src="img/logo.jpeg" alt="GoWWW" id="logo" style="height: 250px;">
+                <img src="img/logo.png" alt="GoWWW" id="logo" style="height: 250px;">
                 <div class="col-lg-8 mx-auto"><p class="lead mt-2">A Nonprofit Initiative to Foster a Symbiotic Relationship with Developers and Organizations</p></div>
             </div>
         </div>
@@ -121,7 +121,7 @@
                 <div class="d-sm-none col-sm mt-3"><hr></div>
                 <div class="col my-3 my-sm-0">
                     <h4>Mohammed Suhail CS</h4>
-                    <img height="200px" class="rounded-circle mt-2" src="img/team/placeholder.jpg" alt="Mohammed Suhail CS">
+                    <img height="200px" class="rounded-circle mt-2" src="img/team/suhail.jpg" alt="Mohammed Suhail CS">
                     <p class="lead text-center text-uppercase mt-2">Co-founder</p>
                     <ul class="list-inline social-buttons mt-3">
                         <li class="list-inline-item">
