--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
-    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="js/scroll.js"></script>
 </head>
 <body class="bg-primary">
 
+<script>
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
 
 <div class="col-sm-12 col-lg-12 mx-auto mt-4">
 <div class="jumbotron">
@@ -165,8 +170,35 @@
           </div>
       </section>
         <hr>
-    <p class="text-center lead">&copy; GoWWW 2018</p>
-        <p class="text-center lead"><a href="mailto:meetings@gowww.org.in?cc=pranav@gowww.org.in, s@gowww.org.in" target="_blank">Email Us!</a></p>
+
+        <div class="text-center mb-4">
+            <p class="lead"><strong>Around the Web</strong></p>
+            <ul class="list-inline">
+                <li class="list-inline-item">
+                    <a class="btn btn-outline-dark btn-social text-center rounded-circle" href="https://www.instagram.com/justgowww/" target="_blank" data-toggle="tooltip" data-placement="top" title="Instagram">
+                        <i class="fa fa-fw fa-instagram"></i>
+                    </a>&nbsp;
+
+                    <a class="btn btn-outline-dark btn-social text-center rounded-circle" href="https://twitter.com/justgowww/" target="_blank"  data-toggle="tooltip" data-placement="top" title="Twitter">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+
+                    <a class="btn btn-outline-dark btn-social text-center rounded-circle" href="https://www.linkedin.com/company/justgowww" target="_blank"  data-toggle="tooltip" data-placement="top" title="LinkedIn">
+                        <i class="fa fa-fw fa-linkedin"></i>
+                    </a>&nbsp;
+
+                    <a class="btn btn-outline-dark btn-social text-center rounded-circle" href="https://www.facebook.com/justgowww" target="_blank"  data-toggle="tooltip" data-placement="top" title="Facebook">
+                        <i class="fa fa-fw fa-facebook"></i>
+                    </a>
+                    <a class="btn btn-outline-dark btn-social text-center rounded-circle" href="mailto:meetings@gowww.org.in?cc=pranav@gowww.org.in, s@gowww.org.in" data-toggle="tooltip" data-placement="top" title="Email" target="_blank">
+                        <i class="fa fa-fw fa-envelope"></i>
+                    </a>&nbsp;
+                </li>
+            </ul>
+        </div>
+        <hr>
+    <p class="text-center lead"><a href="mailto:meetings@gowww.org.in?cc=pranav@gowww.org.in, s@gowww.org.in" data-toggle="tooltip" data-placement="top" title="meetings@gowww.org.in" target="_blank">Email Us!</a></p>
+        <p class="text-center lead">&copy; GoWWW 2018</p>
 </div>
 </div>
 </div>
@@ -186,7 +218,6 @@
 </script>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
