--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title>GoWWW</title>
-    <meta property='og:image' content='img/logo.png'/>
+    <meta property='og:image' content='https://gowww.org.in/img/logo.png'/>
     <link rel="icon" href="img/logo.png">
     <link rel="shortcut icon" href="img/logo.png">
 
