--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="row text-center">
                 <div class="col">
                     <h4>Pranav Shikarpur</h4>
-                    <img height="200px" class="rounded-circle mt-2" src="img/team/pranav.jpg" alt="Pranav Shikarpur">
+                    <img height="200px" class="rounded-circle mt-2" src="img/team/pranav.png" alt="Pranav Shikarpur">
                     <p class="lead text-center text-uppercase mt-2">Co-founder</p>
                     <ul class="list-inline social-buttons mt-3">
                         <li class="list-inline-item">
@@ -179,7 +179,7 @@
                 <div class="d-sm-none col-sm mt-3"><hr></div>
                 <div class="col my-3 my-sm-0">
                     <h4>Mohammed Suhail CS</h4>
-                    <img height="200px" class="rounded-circle mt-2" src="img/team/suhail.jpg" alt="Mohammed Suhail CS">
+                    <img height="200px" class="rounded-circle mt-2" src="img/team/suhail.png" alt="Mohammed Suhail CS">
                     <p class="lead text-center text-uppercase mt-2">Co-founder</p>
                     <ul class="list-inline social-buttons mt-3">
                         <li class="list-inline-item">
@@ -197,6 +197,13 @@
                                 <i class="fa fa-linkedin"></i>
                             </a>
                         </li>
+                        
+                         <li class="list-inline-item">
+                            <a href="https://suhail.company" target="_blank">
+                                <i class="fa fa-external-link"></i>
+                            </a>
+                        </li>
+                        
                     </ul>
                 </div>
             </div>
