--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                           <a href="https://ceo.pranav.ventures" target="_blank">
+                           <a href="https://snpranav.com/?utm_medium=team&utm_source=gowww.org.in" target="_blank">
                                <i class="fa fa-external-link"></i>
                            </a>
                        </li>
